PROJECT(RENAMAH)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

FIND_PACKAGE(Qt4 REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/libcore)

option (UPDATE_TRANSLATIONS "Update source translation translations/*.ts files (WARNING: make clean will delete the source .ts files! Danger!)"
  "off")
option (NO_OBSOLETE_TRANSLATIONS "Remove all obsolete translations in *.ts files. This options will work only when UPDATE_TRANSLATIONS is on"
  "off")

# Use: COMPUTE_QT_FILES(QM_FILES ${SOURCE_FILES} ${TRANSLATIONS_FILES})
MACRO(COMPUTE_QM_FILES QM_FILES)
  FILE (GLOB TRANSLATION_FILES translations/*.ts)

  if (UPDATE_TRANSLATIONS)
	if (NO_OBSOLETE_TRANSLATIONS)
      QT4_CREATE_TRANSLATION(${QM_FILES} ${ARGN} ${TRANSLATION_FILES} OPTIONS -noobsolete)
	else (NO_OBSOLETE_TRANSLATIONS)
	  QT4_CREATE_TRANSLATION(${QM_FILES} ${ARGN} ${TRANSLATION_FILES})
	endif (NO_OBSOLETE_TRANSLATIONS)
  else (UPDATE_TRANSLATIONS)
	QT4_ADD_TRANSLATION(${QM_FILES} ${TRANSLATION_FILES})
  endif (UPDATE_TRANSLATIONS)
ENDMACRO(COMPUTE_QM_FILES)

ADD_CUSTOM_COMMAND(
    PRE_BUILD
    TARGET dev
    COMMAND touch ARGS ${PROJECT_BINARY_DIR}/dev
)

ADD_SUBDIRECTORY(libcore)
ADD_SUBDIRECTORY(plugins)
ADD_SUBDIRECTORY(renamah)

#INSTALL(DIRECTORY share/renamah
#  DESTINATION share)

INSTALL(DIRECTORY lib/renamah
  DESTINATION lib)
